# bcos-storage

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: workflow.yml
bcos-storage/: CMakeLists.txt  Common.cpp  Common.h  RocksDBStorage.cpp  RocksDBStorage.h  TiKVStorage.cpp  TiKVStorage.h
cmake/: ProjectTiKVClient.cmake  config.cmake
doc/: README_CN.md
include/bcos-storage/: AdapterInterface.h  KVDBInterface.h  RocksDBAdapter.h  RocksDBAdapterFactory.h  Storage.h
src/: AdapterInterface.h  CMakeLists.txt  KVDBImpl.cpp  KVDBImpl.h  KVDBInterface.h  RocksDBAdapter.cpp  RocksDBAdapter.h  RocksDBAdapterFactory.cpp  RocksDBStorage.cpp  RocksDBStorage.h  Storage.cpp  Storage.h
src/RocksDBAdapter/: RocksDBAdapter.cpp  RocksDBAdapter.h  RocksDBAdapterFactory.cpp  RocksDBAdapterFactory.h  RocksDBStorage.cpp  RocksDBStorage.h  RocksDBStorageFactory.cpp  RocksDBStorageFactory.h
test/: CMakeLists.txt  main.cpp
test/perf/: CMakeLists.txt  multiget.cpp  table_benchmark.cpp
test/unittest/: CMakeLists.txt  MemoryDB.h  RocksDBAdapterTest.cpp  StorageTest.cpp  TestRocksDBStorage.cpp  TestTiKVStorage.cpp
tools/: CMakeLists.txt  reader.cpp
